issue-1 Fix alias issue

--- a/root/opt/IBM/db2/clidriver/cfg/db2dsdriver.cfg
+++ b/root/opt/IBM/db2/clidriver/cfg/db2dsdriver.cfg
@@ -1,17 +1,17 @@
 <configuration>
   <dsncollection>
-    <dsn alias="{SCHEMA_CORE}" name="G2" host="{HOST_CORE}" port="{PORT_CORE}"></dsn>
-    <dsn alias="{SCHEMA_RES}" name="G2" host="{HOST_RES}" port="{PORT_RES}"></dsn>
-    <dsn alias="{SCHEMA_LIBFE}" name="G2" host="{HOST_LIBFE}" port="{PORT_LIBFE}"></dsn>
+    <dsn alias="SCHEMA_CORE" name="{SCHEMA_CORE}" host="{HOST_CORE}" port="{PORT_CORE}"></dsn>
+    <dsn alias="SCHEMA_RES" name="{SCHEMA_RES}" host="{HOST_RES}" port="{PORT_RES}"></dsn>
+    <dsn alias="SCHEMA_LIBFE" name="{SCHEMA_LIBFE}" host="{HOST_LIBFE}" port="{PORT_LIBFE}"></dsn>
   </dsncollection>
   <databases>
-    <database name="G2" host="{HOST_CORE}" port="{PORT_CORE}">
+    <database name="{SCHEMA_CORE}" host="{HOST_CORE}" port="{PORT_CORE}">
       <parameter name="CommProtocol" value="TCPIP"/>
     </database>
-    <database name="G2" host="{HOST_RES}" port="{PORT_RES}">
+    <database name="{SCHEMA_RES}" host="{HOST_RES}" port="{PORT_RES}">
       <parameter name="CommProtocol" value="TCPIP"/>
     </database>
-    <database name="G2" host="{HOST_LIBFE}" port="{PORT_LIBFE}">
+    <database name="{SCHEMA_LIBFE}" host="{HOST_LIBFE}" port="{PORT_LIBFE}">
       <parameter name="CommProtocol" value="TCPIP"/>
     </database>
   </databases>
