--- a/root/etc/odbc.ini
+++ b/root/etc/odbc.ini
@@ -1,16 +1,16 @@
-[{SCHEMA_CORE}]
+[SCHEMA_CORE]
 Description = Senzing database for {SCHEMA_CORE}
 Driver = DB2
 Server = {HOST_CORE}
 Port = {PORT_CORE}
 
-[{SCHEMA_RES}]
+[SCHEMA_RES]
 Description = Senzing database for {SCHEMA_RES}
 Driver = DB2
 Server = {HOST_RES}
 Port = {PORT_RES}
 
-[{SCHEMA_LIBFE}]
+[SCHEMA_LIBFE]
 Description = Senzing database for {SCHEMA_LIBFE}
 Driver = DB2
 Server = {HOST_LIBFE}
